# cg-pytools

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: package.yml
resources/inputs/: README.md  addinput.txt  input.txt
resources/inputs/examples/equilibrium_colour_surfaces/: input.txt
resources/inputs/examples/equilibrium_find_surfaces/: input.txt
resources/inputs/examples/equilibrium_no_auto/: addinput.txt  input.txt
resources/inputs/examples/equilibrium_no_auto_memory/: addinput.txt
resources/inputs/examples/equilibrium_no_find/: input.txt
resources/inputs/examples/equilibrium_no_find_surfaces/: addinput.txt
resources/inputs/examples/growth_rates/: addinput.txt  input.txt
resources/inputs/examples/low_dmu/: input.txt
resources/inputs/examples/screw_dislocation/: screw.txt
resources/inputs/examples/two_screw_dislocation/: addinput.txt  input.txt  screw.txt
scripts/HPC/cg_sub_template/: README.txt  cg_folder_sub.sh  input.txt
scripts/HPC/growth_rate_screen/: README.txt  addinput.txt  growth_rate_screen.sh  input.txt  run_growth.sh
scripts/HPC/vary_input_param/: README.txt  vary_input.sh  vary_input_param.sh
scripts/HPC/vary_net_param/: README.txt  vary_net.sh  vary_net_param.sh
scripts/interactive/: README.md  generate_jobscripts.py
scripts/python/: README.md  growth_kinetics.py  growth_rates.py  screen.py
src/cgpytools/: __init__.py  log.py  plot.py  shape_analysis.py  surfaces.py
src/cgtools/: __init__.py  cg_net.py  crystal_io.py  plot.py  shape_analysis.py  surfaces.py
(+55 files in other folders)
